class ReportSubmissionController {
    currentUser: User;
    currentReport: TestReport;

    constructor(currentUser: User, currentReport: TestReport) {
        this.currentUser = currentUser;
        this.currentReport = currentReport;
    }

    loadReportInterface(): void {
        //Implementation for loading report interface
    }

    retrieveTestItemInfo(testItemIds: string[]): TestItemInfo[] {
        //Implementation for retrieving test item info
        return [];
    }

    verifyReportContent(): boolean {
        //Implementation for verifying report content
        return true;
    }

    saveReport(report: TestReport): boolean {
        //Implementation for saving report
        return true;
    }

    sendNotification(reportNumber: string): boolean {
        //Implementation for sending notification
        return true;
    }

    handleSystemError(): void {
        //Implementation for handling system error
    }
}

interface User {
    //User properties
}

interface TestReport {
    //TestReport properties
}

interface TestItemInfo {
    //TestItemInfo properties
}